# karaoke-server

./: .dockerignore  .gitignore  CHECKS  Dockerfile  Pipfile  Procfile  Procfile.dev  README.md  app.py  crawl_ky.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  worker.py
karaokeserver/: analytics.py  app.py  command.py  database.py
karaokeserver/crawler/: __init__.py  anisong.py  crawl_ky.py  ky.py  tj.py  types.py
karaokeserver/static/: master.js  style.css
karaokeserver/templates/: anisong.html  google-adsense.html  google-analytics.html  index.html  template.html
